--- a/Data Source/NHUNG/SeminarNhung/FlipTile/MainPage.xaml
+++ b/Data Source/NHUNG/SeminarNhung/FlipTile/MainPage.xaml
@@ -41,14 +41,14 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="FlipTile" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
         </Grid>
+        <Button x:Name="btUpdated" Content="Update" HorizontalAlignment="Left" Margin="159,170,0,0" Grid.Row="1" VerticalAlignment="Top" Click="bt_Updated"/>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
             aligned on common boundaries.  The image has a top margin of -32px to
