--- a/Data Source/NHUNG/SeminarNhung/CycleTile/MainPage.xaml
+++ b/Data Source/NHUNG/SeminarNhung/CycleTile/MainPage.xaml
@@ -41,14 +41,14 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="Cycle Tile" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
+            <TextBlock Text="CYCLE TILE" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
         </Grid>
-        <Button x:Name="btUpdated" Content="Update" HorizontalAlignment="Left" Margin="180,187,0,0" Grid.Row="1" VerticalAlignment="Top" Click="bt_Update"/>
+        <Button x:Name="btUpdated" Content="Update" HorizontalAlignment="Left" Margin="180,159,0,0" Grid.Row="1" VerticalAlignment="Top" Click="bt_Update" Height="100"/>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
             aligned on common boundaries.  The image has a top margin of -32px to
