--- a/Data Source/DIDONG/Source/Music Player With Speech Recognition/PocketSphinxWindowsPhoneDemo/Pages/PlaylistPage.xaml
+++ b/Data Source/DIDONG/Source/Music Player With Speech Recognition/PocketSphinxWindowsPhoneDemo/Pages/PlaylistPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="Ahihi_DBz.Songs"
+    x:Class="PocketSphinxWindowsPhoneDemo.PlaylistPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -13,7 +13,6 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
     <phone:PhoneApplicationPage.Resources>
         <DataTemplate x:Key="AddrSongItemTemplate">
             <StackPanel VerticalAlignment="Top">
@@ -57,7 +56,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MUSIC AND SPEECH" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="MUSIC LIBRARY" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="songs" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
         <!--ContentPanel - place additional content here-->
